[project]
name = "cllamaude"
version = "0.1.0"
description = "Ollama-powered coding CLI assistant"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "rich>=13.0.0",
]

[project.scripts]
cllamaude = "cllamaude.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
